# agent-plugin

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_plugin/: __init__.py  hooks.py  loader.py  plugin.py  registry.py
src/agent_plugin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_hooks.py  test_loader.py  test_plugin.py  test_registry.py
