[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-plugin"
version = "0.1.0"
description = "Production plugin system for extending LLM agents — pure stdlib, zero dependencies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
keywords = ["plugin", "llm", "agent", "extensibility", "hooks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/example/agent-plugin"
"Bug Tracker" = "https://github.com/example/agent-plugin/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
strict = true
python_version = "3.10"
